--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 body {
     height: 100vh;
     background-color: #000;
-    background-image: url(/images/background.jpg);
+    background-image: url(images/background.jpg);
     background-size: cover;
     background-position: center;
 }
